--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,38 @@
+/* src/App.css */
 .App {
   text-align: center;
+  margin-top: 30px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1 {
+  font-family: "Arial", sans-serif;
+  color: #3f51b5;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.form-header {
+  margin-bottom: 20px;
+  font-size: 24px;
+  font-weight: bold;
+  color: #3f51b5;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.field-group {
+  margin-bottom: 30px;
+  text-align: left;
 }
 
-.App-link {
-  color: #61dafb;
+.field-group label {
+  font-weight: bold;
+  margin-bottom: 10px;
+  display: block;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.submit-container {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.response-message {
+  margin-top: 20px;
+  font-size: 16px;
 }
